--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ reqwest = { version = "0.12.8", features = ["json"] }
 scraper = "0.20.0"
 serde = { version = "1.0", features = ["derive"] }
 serenity = "0.12.4"
+shuttle-runtime = "0.49.0"
+shuttle-serenity = "0.49.0"
 tokio = { version = "1.40.0", features = ["full"] }
